--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-template",
+  "name": "clothingPage",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "zhuliang <937154020@qq.com>",
