--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "iview": "^2.0.0-rc.17",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "muse-ui": "^2.1.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
